--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 
   
 
-  <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <div id="sidebar" class="sidenav">
+    <button type="button" class="closebtn" onclick="closeNav()">&times;</button>
     <a href="#about">About</a>
     <a href="#services">Services</a>
     <a href="#portfolio">Portfolio</a>
@@ -104,11 +104,11 @@
 
   <script>
     function openNav() {
-    document.getElementById("mySidenav").style.width = "250px";
+    document.getElementById("sidebar").style.width = "250px";
     }
     
     function closeNav() {
-    document.getElementById("mySidenav").style.width = "0";
+    document.getElementById("sidebar").style.width = "0";
     }
   </script>
 
