fixed sidenav, added to innerpage

--- a/index.html
+++ b/index.html
@@ -89,9 +89,6 @@
   -->
   <a href="inner-page.html" class="change-location d-flex align-items-center justify-content-center"><i class="bi bi-pin-angle-fill"></i></a>
 
-
-  
-
   <div id="sidebar" class="sidenav">
     <button type="button" class="closebtn" onclick="closeNav()">&times;</button>
     <a href="#about">About</a>
@@ -100,7 +97,7 @@
     <a href="#contact">Contact</a>
   </div>
 
-  <span style="font-size: 30px; cursor: pointer; position: fixed; left: 15px; top: 15px;" onclick="openNav()">&#9776; open</span>
+  <span style="font-size: 30px; cursor: pointer; position: fixed; left: 15px; top: 15px;" onclick="openNav()">&#9776; Main</span>
 
   <script>
     function openNav() {
@@ -112,9 +109,9 @@
     }
   </script>
 
-   
- 
-</header><!-- End Header -->
+
+</header>
+<!-- End Header -->
 
 <!-- ======= About Us Section ======= -->
   <section id="about" class="about">
