remove logo in header

--- a/inner-page.html
+++ b/inner-page.html
@@ -51,7 +51,7 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">LU•GA</a></h1>
+      <!-- <h1 class="logo me-auto"><a href="index.html">LU•GA</a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -86,7 +86,7 @@
       </nav> .navbar   
     </div>
 
-    
+
   -->
   <a href="index.html" class="change-location d-flex align-items-center justify-content-center"><i class="bi bi-pin-angle-fill"></i></a>
 
