remove top bar, re-center elements

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
 
-  <!-- ======= Top Bar ======= -->
+  <!-- ======= Top Bar ======= 
   <section id="topbar" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
@@ -46,6 +46,7 @@
       </div>
     </div>
   </section>
+  -->
 
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
@@ -98,7 +99,7 @@
     <a href="#contact">Contact</a>
   </div>
 
-  <span style="font-size: 30px; cursor: pointer; position: fixed; left: 15px; top: 30px;" onclick="openNav()">&#9776; Main</span>
+  <span style="font-size: 30px; cursor: pointer; position: fixed; left: 15px; top: 15px;" onclick="openNav()">&#9776; Main</span>
 
   <script>
     function openNav() {
